<resources>
    <string name="app_name">Parstagram</string>
    <string name="log_in">LOG IN</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="create">CREATE</string>
    <string name="refresh">REFRESH</string>
    <string name="enter_a_description">enter a description</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="handle">Handle</string>
    <string name="log_out">LOG OUT</string>
</resources>
